opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/api-client"
bug-reports: "https://github.com/cryptosense/api-client/issues"
license: "BSD-2"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {with-test}
  "base64"
  "dune" {>= "2.7.0"}
  "containers"
  "cmdliner"
  "hacl_x25519" {< "0.2.0"}
  "lwt"
  "lwt_ppx"
  "lwt_ssl"
  "ocaml" {>= "4.04.0"}
  "ocamlformat" {= "0.15.0" & with-test}
  "ppx_deriving"
  "stringext"
  "terminal_size"
  "tls"
  "yojson"
  "ocurl"
]
synopsis: "Utilities for the Cryptosense API"
