opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/api-client"
bug-reports: "https://github.com/cryptosense/api-client/issues"
license: "BSD-2-Clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {with-test}
  "base64"
  "cmdliner" {>= "1.2.0"}
  "containers" {>= "3.6"}
  "dune" {>= "2.7.0"}
  "lwt"
  "lwt_ppx"
  "ocaml" {>= "4.14.0"}
  "ocamlformat" {= "0.25.1" & with-dev-setup}
  "ocurl" {< "0.9.2"}  # For compilation with old libcurl
  "ppx_deriving"
  "terminal_size" {>= "0.2.0"}  # For compilation on Windows
  "yojson"
]
synopsis: "Utilities for the Cryptosense API"
