[tool.poetry]
name = "cs-api-tests"
version = "0.1.0"
description = ""
authors = ["SandboxAQ <contact@sandboxaq.com>"]
license = "BSD-2-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.5"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
