opam-version: "0.0.1"
license: "BSD-2"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {with-test}
  "dune" {build}
  "lwt"
  "lwt.unix"
]
synopsis: "Writer for multipart/form-data (RFC2388)"
description: """
This is a writer to generate valid multipart/form-data bodies.
It generates Lwt_streams that can directly be passed to cohttp.
"""
